# ifengine

./: .gitignore  .typos.toml  Cargo.toml  README.md  TODO.md  index.html
.github/workflows/: rust.yml
egui/: Cargo.toml  README.md  build.rs  index.html  netlify.toml
egui/src/: app.rs  app_impl.rs  graph.rs  lib.rs  main.rs  mod.rs  render.rs  theme.rs  utils.rs  view.rs
egui_alignments/: Cargo.toml  README.md
egui_alignments/src/: alignable.rs  aligner.rs  container.rs  lib.rs
egui_alignments/src/container/: column.rs  row.rs
ifengine/: Cargo.toml  README.md
ifengine/src/: errors.rs  lib.rs
ifengine/src/core/: action.rs  game.rs  game_state.rs  mod.rs  page.rs  page_state.rs
ifengine/src/elements/: mod.rs
ifengine/src/run/: interact.rs  mod.rs  sim.rs
ifengine/src/utils/: mask.rs  mod.rs  text.rs
ifengine/src/view/: image.rs  line.rs  mod.rs
ifengine_egui/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  Trunk.toml  build.rs  netlify.toml
ifengine_egui/assets/: sw.js
ifengine_egui/src/: app.rs  app_impl.rs  app_type.rs  graph.rs  lib.rs  main.rs  render.rs  theme.rs  utils.rs  view.rs
ifengine_macros/: Cargo.toml  README.md
ifengine_macros/src/: lib.rs  lib.sync-conflict-20251203-161630-HQ4HLQZ.rs  nodes.rs
ifengine_story/: Cargo.toml
ifengine_story/src/: lib.rs
ifengine_story/src/saltwrack/: chap1.rs  mod.rs
ifengine_story/src/test_story/: chap1.rs
story/: Cargo.toml
story/src/: lib.rs
story/src/saltwrack/: README.md  chap1.rs  chap1d.rs  mod.rs
story/src/test_story/: chap1.rs  mod.rs
