[package]
name = "ifengine"
version = "0.0.1"
authors = ["Squirreljetpack"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
bitflags = "2.10.0"
const-fnv1a-hash = "1.1.0"

ifengine_macros = { path = "../ifengine_macros", optional = true }
rand = "0.9.2"
thiserror = "2.0.17"

regex = { version = "1", optional = true }
num2words = { version = "1.2", optional = true }
iddqd = "0.3.17"

[features]
default = ["macros", "text", "serde"]
macros = ["ifengine_macros"]
text = ["regex", "num2words"]
serde = ["serde/derive"]

