[package]
name = "ifengine"
version = "0.0.1"
authors = ["Squirreljetpack"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
bitflags = "2.10.0"
thiserror = "2.0.17"
iddqd = "0.3.17"

ifengine_macros = { path = "../ifengine_macros", optional = true }

# optional
serde = { version = "1.0.219", features = ["derive"], optional = true }

rand = { version = "0.9.2", optional = true }
const-fnv1a-hash = { version = "1.1.0", optional = true }

num2words = { version = "1.2", optional = true }

[features]
default = ["macros"]
rand = ["dep:rand", "dep:const-fnv1a-hash"]
macros = ["ifengine_macros"]
serde = ["serde/derive"]

