[package]
name = "story"
version = "0.0.1"
authors = ["Squirreljetpack"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}
ifengine = { path = "../ifengine", features = ["macros"] }

[features]
default = ["saltwrack"]
saltwrack = []
serde = ["serde/derive"]
